compiler/testData/diagnostics/tests/inference/kt12399.kt
fun foo(a: Any) {
    foo({ <!CANNOT_INFER_PARAMETER_TYPE!>index<!> -> } {  })
}
